Closed Bug 1013638 Opened 12 years ago Closed 12 years ago

HTTP cache v2: CacheFileIn(Out)putStream::AsyncWait() doesn't respect eventTarget argument

Categories

(Core :: Networking: Cache, defect)

defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: michal, Assigned: michal)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Attached patch patch v1Splinter Review
No description provided.
Attachment #8425857 - Flags: review?(honzab.moz)
Blocks: 1013587
Comment on attachment 8425857 [details] [diff] [review] patch v1 Review of attachment 8425857 [details] [diff] [review]: ----------------------------------------------------------------- Try is green and I didn't find any problems locally (today). Let's wait here how the mobile memory regression evolves first, I don't want to put to many change in there one-by-one.
Attachment #8425857 - Flags: review?(honzab.moz) → review+
So, since it's just a week to the merge, I think we should land this potentially dangerous patch after the merge. It's actually blocking only a perf optimization, otherwise the code is stable despite this omission.
Michal, can you please land this patch? I can do it for you if you can't and land it together with bug 1013587.
Flags: needinfo?(michal.novotny)
Going to land (confirmed on IRC).
Flags: needinfo?(michal.novotny)
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
Comment on attachment 8425857 [details] [diff] [review] patch v1 [Approval Request Comment] Bug caused by (feature/regressing bug #): 913807 User impact if declined: blocks significant cache load optimization (bug 1013587) Testing completed (on m-c, etc.): more than 10 days on m-c Risk to taking this patch (and alternatives if risky): low String or IDL/UUID changes made by this patch: none
Attachment #8425857 - Flags: approval-mozilla-aurora?
Depends on: 1026951
Comment on attachment 8425857 [details] [diff] [review] patch v1 Dropping the request until bug 1026951 cause is known (can be related).
Attachment #8425857 - Flags: approval-mozilla-aurora?
Depends on: 1039536
Depends on: 1042192
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: