Bug 1013638 - CacheFileIn(Out)putStream::AsyncWait() doesn't respect eventTarget argument, r=honzab